[gd_scene load_steps=24 format=3 uid="uid://blthgbyyhslja"]

[ext_resource type="Script" path="res://MasterScript.gd" id="1_23wxo"]
[ext_resource type="Material" uid="uid://ctabpq8w38mf1" path="res://Materials/FloorMat.tres" id="1_ged3t"]
[ext_resource type="PackedScene" uid="uid://cbs3qgjbcbbhm" path="res://Character/Character.tscn" id="1_qoev2"]
[ext_resource type="Material" uid="uid://c7vkvw0p1ncth" path="res://Materials/WallMat.tres" id="2_4ejvd"]
[ext_resource type="Material" uid="uid://dks87o80v4mks" path="res://Materials/AccentMat.tres" id="2_fnffy"]
[ext_resource type="PackedScene" uid="uid://dign8sewgdg1e" path="res://Scenes/Initial/Initial_scene.tscn" id="2_ljen1"]
[ext_resource type="PackedScene" uid="uid://bpw1e54x2wav2" path="res://Scenes/Neumann.tscn" id="3_jp55d"]
[ext_resource type="PackedScene" uid="uid://b323uxr2knjmo" path="res://Scenes/Drill.tscn" id="3_q0y7k"]
[ext_resource type="PackedScene" uid="uid://cb6c7tyqk2e71" path="res://Scenes/Godot.tscn" id="4_1xu7v"]
[ext_resource type="Material" uid="uid://bo4j5d6vx2t7r" path="res://Materials/SkyMat.tres" id="5_dxx4a"]
[ext_resource type="PackedScene" uid="uid://oi7akl8j4jaw" path="res://Scenes/Hako.tscn" id="5_v1sum"]
[ext_resource type="PackedScene" uid="uid://cpakx4m7vbaup" path="res://Scenes/Ender.tscn" id="6_erl7p"]
[ext_resource type="Theme" uid="uid://3mnnjmkrmqfd" path="res://UI_Theme.tres" id="18_svpvp"]
[ext_resource type="Texture2D" uid="uid://bl7n02fr2pn34" path="res://Graphics/GUI-Icons/Left.png" id="19_oel06"]
[ext_resource type="Texture2D" uid="uid://dluf3jp2bdyo6" path="res://Graphics/GUI-Icons/ninepatch.png" id="20_3uvej"]
[ext_resource type="Texture2D" uid="uid://bspflm7p8ap7b" path="res://Graphics/GUI-Icons/cROSS.png" id="21_fogcb"]
[ext_resource type="Texture2D" uid="uid://dtuabkhn3lnui" path="res://Graphics/GUI-Icons/Right.png" id="22_lnsiw"]
[ext_resource type="Texture2D" uid="uid://dqgq5owh8ly4q" path="res://Graphics/GUI-Icons/Prompt.png" id="23_x83hh"]

[sub_resource type="BoxMesh" id="BoxMesh_cibqs"]
material = ExtResource("1_ged3t")
size = Vector3(12, 3, 12)

[sub_resource type="BoxMesh" id="BoxMesh_j5bmd"]
material = ExtResource("2_fnffy")
size = Vector3(1, 38.89, 1)

[sub_resource type="BoxMesh" id="BoxMesh_bohbp"]
material = ExtResource("2_4ejvd")
size = Vector3(15, 50, 15)

[sub_resource type="BoxShape3D" id="BoxShape3D_1jyp7"]
size = Vector3(1, 11.48, 1)

[sub_resource type="QuadMesh" id="QuadMesh_p61qe"]
material = ExtResource("5_dxx4a")
size = Vector2(40, 40)

[node name="Node3D" type="Node3D"]
script = ExtResource("1_23wxo")
welcome_screen = ExtResource("2_ljen1")
expositions = [ExtResource("3_q0y7k"), ExtResource("6_erl7p"), ExtResource("4_1xu7v"), ExtResource("5_v1sum"), ExtResource("3_jp55d")]
textdb_location = "res://Data/dbtext.csv"

[node name="Building" type="Node3D" parent="."]

[node name="Models" type="Node3D" parent="Building"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Building/Models"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.5, 0)
mesh = SubResource("BoxMesh_cibqs")
skeleton = NodePath("../../..")

[node name="Node3D" type="Node3D" parent="Building/Models"]
transform = Transform3D(0.5, 0, 0, 0, 1, 0, 0, 0, 0.5, 0, 0, 0)

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Building/Models/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.2, 17.293, 7.2)
mesh = SubResource("BoxMesh_j5bmd")
skeleton = NodePath("../../../..")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Building/Models/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.2, 17.293, 7.2)
mesh = SubResource("BoxMesh_j5bmd")
skeleton = NodePath("../../../..")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="Building/Models/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.2, 17.293, -7.2)
mesh = SubResource("BoxMesh_j5bmd")
skeleton = NodePath("../../../..")

[node name="MeshInstance3D6" type="MeshInstance3D" parent="Building/Models/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.2, 17.293, -7.2)
mesh = SubResource("BoxMesh_j5bmd")
skeleton = NodePath("../../../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Building/Models/Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 13.6821, 0)
mesh = SubResource("BoxMesh_bohbp")
skeleton = NodePath("../../../..")

[node name="SpawnPoints" type="Node3D" parent="Building"]

[node name="0" type="Node3D" parent="Building/SpawnPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3.75)

[node name="1" type="Node3D" parent="Building/SpawnPoints"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -3.75, 0, 1.63918e-07)

[node name="2" type="Node3D" parent="Building/SpawnPoints"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 3.75)

[node name="3" type="Node3D" parent="Building/SpawnPoints"]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 3.75, 0, -1.63918e-07)

[node name="Detectors" type="Node3D" parent="Building"]

[node name="f_right" type="Node3D" parent="Building/Detectors"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.25, 0, -5.25)

[node name="f_right_probe" type="Area3D" parent="Building/Detectors/f_right" groups=["BoundaryDetectors"]]

[node name="f_right_probe_collider" type="CollisionShape3D" parent="Building/Detectors/f_right/f_right_probe" groups=["BoundaryDetectors"]]
shape = SubResource("BoxShape3D_1jyp7")

[node name="b_right" type="Node3D" parent="Building/Detectors"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.25, 0, 5.25)

[node name="b_right_probe" type="Area3D" parent="Building/Detectors/b_right" groups=["BoundaryDetectors"]]

[node name="b_right_collider" type="CollisionShape3D" parent="Building/Detectors/b_right/b_right_probe" groups=["BoundaryDetectors"]]
shape = SubResource("BoxShape3D_1jyp7")

[node name="b_left" type="Node3D" parent="Building/Detectors"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.25, 0, 5.25)

[node name="b_left_probe" type="Area3D" parent="Building/Detectors/b_left" groups=["BoundaryDetectors"]]

[node name="b_left_collider" type="CollisionShape3D" parent="Building/Detectors/b_left/b_left_probe" groups=["BoundaryDetectors"]]
shape = SubResource("BoxShape3D_1jyp7")

[node name="f_left" type="Node3D" parent="Building/Detectors"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.25, 0, -5.25)

[node name="f_left_probe" type="Area3D" parent="Building/Detectors/f_left" groups=["BoundaryDetectors"]]

[node name="f_left_collider" type="CollisionShape3D" parent="Building/Detectors/f_left/f_left_probe" groups=["BoundaryDetectors"]]
shape = SubResource("BoxShape3D_1jyp7")

[node name="CameraPivot" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(-1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 2.93308, -15.6102)
projection = 1
current = true
size = 7.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8.45966, 20.0075)
mesh = SubResource("QuadMesh_p61qe")

[node name="Character" parent="." instance=ExtResource("1_qoev2")]
transform = Transform3D(1.00211, 0, 0, 0, 1.00211, 0, 0, 0, 1.00211, 0, 0, -5.25)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.00354899
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("18_svpvp")

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("18_svpvp")
theme_override_constants/separation = 0
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="Control/HBoxContainer"]
layout_mode = 2
offset_right = 146.0
offset_bottom = 540.0
theme = ExtResource("18_svpvp")

[node name="MarginContainer2" type="MarginContainer" parent="Control/HBoxContainer/CenterContainer"]
layout_mode = 2
offset_top = 222.0
offset_right = 146.0
offset_bottom = 318.0
theme = ExtResource("18_svpvp")
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 0

[node name="AspectRatioContainer3" type="AspectRatioContainer" parent="Control/HBoxContainer/CenterContainer/MarginContainer2"]
layout_mode = 2
offset_left = 50.0
offset_right = 146.0
offset_bottom = 96.0
theme = ExtResource("18_svpvp")
stretch_mode = 0

[node name="Left_Button" type="Button" parent="Control/HBoxContainer/CenterContainer/MarginContainer2/AspectRatioContainer3"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
offset_right = 96.0
offset_bottom = 96.0
focus_mode = 0
theme = ExtResource("18_svpvp")
action_mode = 0
keep_pressed_outside = true
icon = ExtResource("19_oel06")
flat = true
icon_alignment = 1
expand_icon = true

[node name="MainTextContainer" type="MarginContainer" parent="Control/HBoxContainer"]
layout_direction = 1
layout_mode = 2
offset_left = 146.0
offset_right = 814.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
mouse_filter = 2
theme = ExtResource("18_svpvp")
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="MainTextRect" type="NinePatchRect" parent="Control/HBoxContainer/MainTextContainer"]
visible = false
layout_mode = 2
offset_left = 50.0
offset_top = 50.0
offset_right = 618.0
offset_bottom = 490.0
texture = ExtResource("20_3uvej")
patch_margin_left = 18
patch_margin_top = 25
patch_margin_right = 25
patch_margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="Control/HBoxContainer/MainTextContainer/MainTextRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/HBoxContainer/MainTextContainer/MainTextRect/VBoxContainer"]
layout_mode = 2
offset_right = 568.0
offset_bottom = 52.0
size_flags_vertical = 3
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Control/HBoxContainer/MainTextContainer/MainTextRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
offset_right = 507.0
offset_bottom = 52.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 12.89
theme_override_constants/margin_left = 42
theme_override_constants/margin_top = 15

[node name="MainTitle" type="RichTextLabel" parent="Control/HBoxContainer/MainTextContainer/MainTextRect/VBoxContainer/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
offset_left = 42.0
offset_top = 15.0
offset_right = 507.0
offset_bottom = 52.0
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 21
bbcode_enabled = true
text = "[center]LOREM IPSUM"

[node name="MarginContainer2" type="MarginContainer" parent="Control/HBoxContainer/MainTextContainer/MainTextRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
offset_left = 511.0
offset_right = 568.0
offset_bottom = 52.0
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="Control/HBoxContainer/MainTextContainer/MainTextRect/VBoxContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
offset_left = 10.0
offset_top = 10.0
offset_right = 42.0
offset_bottom = 42.0
stretch_mode = 1

[node name="DialogExitButton" type="Button" parent="Control/HBoxContainer/MainTextContainer/MainTextRect/VBoxContainer/HBoxContainer/MarginContainer2/AspectRatioContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
offset_right = 32.0
offset_bottom = 32.0
size_flags_horizontal = 3
icon = ExtResource("21_fogcb")
flat = true
icon_alignment = 1
expand_icon = true

[node name="marg" type="MarginContainer" parent="Control/HBoxContainer/MainTextContainer/MainTextRect/VBoxContainer"]
layout_direction = 1
layout_mode = 2
offset_top = 56.0
offset_right = 568.0
offset_bottom = 440.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 7.89
theme = ExtResource("18_svpvp")
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 30

[node name="MainText" type="RichTextLabel" parent="Control/HBoxContainer/MainTextContainer/MainTextRect/VBoxContainer/marg"]
layout_mode = 2
offset_left = 50.0
offset_top = 10.0
offset_right = 518.0
offset_bottom = 354.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("18_svpvp")
bbcode_enabled = true
text = "I know it \\rnvery well

Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum LoremLorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum Lorem Ipsuuuuuuum  Ipsuuuuuuum "

[node name="CenterContainer2" type="CenterContainer" parent="Control/HBoxContainer"]
layout_mode = 2
offset_left = 814.0
offset_right = 960.0
offset_bottom = 540.0
theme = ExtResource("18_svpvp")

[node name="MarginContainer" type="MarginContainer" parent="Control/HBoxContainer/CenterContainer2"]
layout_mode = 2
offset_top = 222.0
offset_right = 146.0
offset_bottom = 318.0
theme = ExtResource("18_svpvp")
theme_override_constants/margin_left = 0
theme_override_constants/margin_right = 50

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="Control/HBoxContainer/CenterContainer2/MarginContainer"]
layout_mode = 2
offset_right = 96.0
offset_bottom = 96.0
theme = ExtResource("18_svpvp")
stretch_mode = 0

[node name="Right_Button" type="Button" parent="Control/HBoxContainer/CenterContainer2/MarginContainer/AspectRatioContainer2"]
texture_filter = 1
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
offset_right = 96.0
offset_bottom = 96.0
focus_mode = 0
theme = ExtResource("18_svpvp")
action_mode = 0
keep_pressed_outside = true
icon = ExtResource("22_lnsiw")
flat = true
icon_alignment = 1
expand_icon = true

[node name="open_prompt" type="Button" parent="Control"]
layout_mode = 0
offset_left = 273.424
offset_top = 119.03
offset_right = 360.424
offset_bottom = 244.03
scale = Vector2(0.6, 0.6)
pivot_offset = Vector2(43, 107)
focus_mode = 0
shortcut_in_tooltip = false
action_mode = 0
icon = ExtResource("23_x83hh")
flat = true
icon_alignment = 1
